force-app/main/default/objects/Critical_Date__c/Critical_Date__c.object-meta.xml
<CustomObject>
    <description>One upcoming critical deadline for a Transaction (Closing, Feasibility End, Insurance Binding, Loan Commitment, Earnest Money). Powers the dashboard Critical Dates Countdown.</description>
    <label>Critical Date</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Critical Date #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critical Dates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>