force-app/main/default/objects/Critical_Date__c/fields/Days_Until__c.field-meta.xml
<CustomField>
    <fullName>Days_Until__c</fullName>
    <description>Days from today until the due date (negative = past). Sorted ascending in the Critical Dates Countdown.</description>
    <formula>Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>