force-app/main/default/objects/Critical_Date__c/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <description>The parent Transaction&apos;s property name, for display in the Critical Dates Countdown.</description>
    <formula>Transaction__r.Property_Name__c</formula>
    <label>Deal</label>
    <type>Text</type>
</CustomField>