force-app/main/default/objects/Critical_Date__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Critical Dates</relationshipLabel>
    <relationshipName>Critical_Dates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>