force-app/main/default/objects/Critical_Date__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closing Date</fullName>
            </value>
            <value>
                <fullName>Feasibility End</fullName>
            </value>
            <value>
                <fullName>Insurance Binding</fullName>
            </value>
            <value>
                <fullName>Loan Commitment</fullName>
            </value>
            <value>
                <fullName>Earnest Money Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>